# ai-

aigc-writing_assistant-master/: README.md  env.yml  pyproject.toml
aigc-writing_assistant-master/test/: poem.txt
aigc-writing_assistant-master/uploads/: 夏蝉.json  春夜喜雨.json
aigc-writing_assistant-master/writing_assistant/: app.py
aigc-writing_assistant-master/writing_assistant/blueprints/: auth.py  classicalChinese.py  home.py  material.py  paint.py  poem.py
aigc-writing_assistant-master/writing_assistant/db/: init_db.py  users.db
aigc-writing_assistant-master/writing_assistant/static/css/: classicalChinese.css  footer.css  header.css  index.css  material.css  overall.css  paint.css  poem.css
aigc-writing_assistant-master/writing_assistant/static/js/: classicalChinese.js  material.js  overall.js  paint.js  poem.js
aigc-writing_assistant-master/writing_assistant/templates/: classicalChinese.html  index.html  login.html  material.html  paint.html  poem.html  register.html
