[tool.poetry]
name = "writingassistant"
version = "0.1.0"
description = ""
authors = ["Capybaring <Q3159508394@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.1"
openai = "^1.86.0"
waitress = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
